--- a/text.css
+++ b/text.css
@@ -1,7 +1,37 @@
-.article-title{
+p{
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    margin-top: 0px;
+    margin-bottom: 0px;
+}
+
+.article-title{
     font-size: 18px;
     font-weight: bold;
     width: 300px;
     line-height: 25px;
+    margin-bottom: 5px;
 }
+
+.video-statistics{
+    font-size: 12px;
+    color: rgb(96, 96, 96);
+    margin-bottom: 20px;
+}
+
+.video-author{
+    font-size: 12px;
+    color: rgb(96, 96, 96);
+    margin-bottom: 20px;
+}
+
+.video-description{
+    font-size: 14px;
+    width: 300px;
+    line-height: 22px;
+}
+
+/*A selector that is more specific is given priority.
+For example class and ID are prioritized over element selectors. 
+
+This is called CSS Specificity
+*/
