--- a/youtube.css
+++ b/youtube.css
@@ -1,11 +1,9 @@
 .thumbnail-1{
     width: 300px;
+    display: block;
 }
 
-.rounded-corners{
-    margin-left: 30px;
-    border-style: solid;
-    padding-top: 7px;
-    padding-bottom: 7px;
-    border-radius: 8px;
+.video-stats, 
+.video-author{
+    display: block;
 }
