--- a/youtube.css
+++ b/youtube.css
@@ -3,9 +3,21 @@
     display: block;
 }
 
-.video-stats, 
-.video-author{
-    display: block;
+p {
+    font-family: Roboto, Arial;
+    margin-top: 0;
+    margin-bottom: 0;
+}
+
+.video-author { 
+    font-size: 12px;
+    color: rgb(96, 96, 96);
+    margin-bottom: 6px;
+}
+
+.video-stats {
+    font-size: 12px;
+    color:rgb(96, 96, 96)
 }
 
 .video-preview{
@@ -21,7 +33,8 @@
 
 .channel-image{
     display: inline-block;
-    width: 50px;
+    width: 40px;
+    vertical-align: top;
 }
 
 .video-details{
@@ -32,4 +45,16 @@
 
 .profile-picture{
     width: 100%;
+    border-radius: 30px;
+}
+
+.video-title{
+    font-weight: 500;
+    font-size: 14px;
+    line-height: 20px;
+    margin-bottom: 12px;
+}
+
+.thumbnail-row {
+    margin-bottom: 12px;
 }
