--- a/styles/header.css
+++ b/styles/header.css
@@ -8,6 +8,8 @@
 .left-section{
     background-color: aquamarine;
     width: 150px;
+    display: flex;
+    align-items: center;
 }
 
 .middle-section{
@@ -21,4 +23,12 @@
 .right-section{
     background-color: aqua;
     width: 200px;
+}
+
+.hamburger-menu{
+    height: 20px;
+}
+
+.youtube-logo{
+    height: 20px;
 }
