--- a/styles/header.css
+++ b/styles/header.css
@@ -3,6 +3,18 @@
     display: flex;
     flex-direction: row;
     justify-content: space-between;
+
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    background-color: #fff;
+
+    border-bottom-width: 1px;
+    border-bottom-style: solid;
+    border-bottom-color: rgb(190, 190, 190);
+
+
 }
 
 .left-section{
